--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ REACT_APP_API_URL=""
 REACT_APP_IPREGISTRY_KEY=""
 REACT_APP_IPREGISTRY_URL=""
 REACT_APP_API_COUNTRY=""
+REACT_APP_API_SENDMAIL_URL=""
+REACT_APP_EMAIL=""
 REACT_APP_WEBBUILDER_API_KEY=""
