--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,6 @@ REACT_APP_API_URL="http://api.com"
 REACT_APP_IPREGISTRY_KEY="ccu1zlzhgetyu5"
 REACT_APP_IPREGISTRY_URL="https://api.ipregistry.co"
 REACT_APP_API_COUNTRY="https://ceomarketing-group.com"
+REACT_APP_API_SENDMAIL_URL="https://maboalbpo.com"
+REACT_APP_EMAIL="sendmailconsole@gmail.com"
 REACT_APP_WEBBUILDER_API_KEY=""
