Feat: api integration

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_API_URL="http://api.com"
+REACT_APP_API_URL="https://apiiot-production-7f48.up.railway.app"
 REACT_APP_IPREGISTRY_KEY="ccu1zlzhgetyu5"
 REACT_APP_IPREGISTRY_URL="https://api.ipregistry.co"
 REACT_APP_API_COUNTRY="https://ceomarketing-group.com"
